# MediTalk

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-nlp.txt  requirements.txt
app/: __init__.py  db.py  main.py  services.py
app/api/: routes.py
app/core/: cache.py  config.py  logging.py
app/models/: conversation.py
app/nlp/: analyzer.py  entities.py  model_registry.py  preprocessing.py  summarization.py  topics.py  urgency.py
app/schemas/: conversation.py
sample_data/: conversation_emergency.json  conversation_routine.json
tests/: test_api.py  test_nlp.py
