[project]
name = "meditalk"
version = "0.1.0"
description = "AI-powered medical chat analysis system built with FastAPI and modern NLP."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "greenlet==3.0.3",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
